--- a/miniprogram/pages/user-center/bill/index.wxml
+++ b/miniprogram/pages/user-center/bill/index.wxml
@@ -14,9 +14,14 @@
         <view class="cu-item shadow arrow" bind:tap="gotoDetail" data-item="{{item}}">
           <view class="content ">
             <view class="text-cut" style="gap: 21rpx;">
-              <view class="text-df">
+              <view wx:if="{{isManager}}" class="text-df">
                 交易金额: <span class="text-price" style="{{item.money<0?'color:red':'color:green'}}">
                   {{filter.formatMoney(item.money)}}
+                </span>
+              </view>
+              <view wx:else class="text-df">
+                交易金额: <span class="text-price" style="color:red">
+                  {{item.money>0?filter.formatMoney(-item.money):filter.formatMoney(item.money)}}
                 </span>
               </view>
               <view wx:if="{{item.type==0}}" class="cu-tag line-purple round sm">会员充值</view>
