--- a/miniprogram/pages/watchOrder/index.wxss
+++ b/miniprogram/pages/watchOrder/index.wxss
@@ -1,1 +1,38 @@
-/* pages/watchOrder/index.wxss */
+.VerticalNav.nav {
+    width: 200rpx;
+    white-space: initial;
+}
+
+.VerticalNav.nav .cu-item {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    border: none;
+    height: 50px;
+    position: relative;
+}
+
+.VerticalNav.nav .cu-item.cur {
+    background-image: linear-gradient(to right, rgb(160, 160, 160), #f1f1f1);
+}
+
+.VerticalNav.nav .cu-item.cur::after {
+    content: "";
+    width: 9rpx;
+    height: 80rpx;
+    border-radius: 0 10rpx 10rpx 0;
+    position: absolute;
+    background-color: currentColor;
+    top: 0;
+    left: 0rpx;
+    bottom: 0;
+    margin: auto;
+}
+
+.VerticalBox {
+    display: flex;
+}
+
+.VerticalMain {
+    background-color: #f1f1f1;
+}
